--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,6 +54,16 @@
             </div>
         </div>
     </div>
+    <% if (config.analytics.google.enabled) { %>
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=<%= config.analytics.google.tracking_id %>"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', '<%= config.analytics.google.tracking_id %>');
+        </script>
+    <% } %>
     <script src="/js/particles.js"></script>
 </body>
 </html>
